fix: sphere & border settings on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,17 @@
   src: url("/fonts/LuckiestGuy-Regular.ttf");
 }
 
+@font-face {
+  font-family: Cooper;
+  src: url("/fonts/CooperHewitt/CooperHewitt-Heavy.otf");
+}
+
 .luckiestGuy {
   font-family: "LuckiestGuy";
+}
+
+.cooper {
+  font-family: "Cooper";
 }
 
 html,
@@ -17,7 +26,14 @@ body,
   margin: 0;
   padding: 0;
   color: white;
+  font-family: Cooper;
+  box-sizing: border-box;
 }
+
+/* .App {
+  width: 100%;
+  height: 100%;
+} */
 
 .hello {
   position: fixed !important;
